Related work (not complete, still messy)

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -170,5 +170,28 @@
   year={2003},
   publisher={Oxford University Press, USA}
   
-  
 }
+
+@book{F. A. Hayek,
+  title={The Denationalization of Money},
+  author={Friedrich Hayek},
+  pages={},
+  year={1978},
+  publisher={Institute of Economic Affairs}
+}
+
+@article{ametrano2016hayek,
+  title={Hayek money: The cryptocurrency price stability solution},
+  author={Ametrano, Ferdinando M},
+  year={2016}
+}
+
+@misc{TheSearc7:online,
+author = {Vitalik Buterin},
+title = {The Search for a Stable Cryptocurrency},
+howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/}},
+month = {November4},
+year = {2014},
+note = {(Accessed on 02/11/2019)}
+}
+
