--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -11,9 +11,9 @@
 % = = = = = Title = = = = = %
 
 \begin{document}
-\title{Analysis on the Current State of Stablecoins}
+\title{Demystifying Stablecoins}
 \author{Didem Demirag \and Seyedehmahsa Moosavi \and Jeremy Clark}
-\date{}
+\date{\textit{Gina Cody School of Engineering and Computer Science\\Concordia University}}
 \maketitle
 
 % = = = = = Abstract = = = = = %
