--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -20,16 +20,16 @@
 \definecolor{LightGrey}{rgb}{0.83,0.83,0.83}
 
 
-\begin{table}[h!]
+\begin{table}[t]
 \centering
 
 \begin{tabular}{|l|l|l|l|l|}
 
 \hline
 \rowcolor{lightgray}
-\textbf{Category} & \textbf{Sub-Category} & \textbf{Examples} & Rank \\  \hline
+\textbf{Category} & \textbf{Sub-Category} & \textbf{Asserted Examples} & Rank \\  \hline
 
-\multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable}					& \textbf{USDC} & 20 \\ \cline{3-4}
+\multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}		& \textbf{USDC} & 20 \\ \cline{3-4}
 						&														& TrueUSD & 26 \\ \cline{3-4}	
 						&														& Paxos & 38 \\ \cline{3-4}												
 						&														& Gemini Dollar & 52 \\ \cline{3-4}
@@ -52,15 +52,12 @@
                                                                                                                  
 \multirow{5}{*}{Intervention}                                                           
 						& \multirow{1}{*}{Market} 										& Nubits & 892 \\ \cline{2-4}
-						& \multirow{1}{*}{Algorithmic with subjective external information}  		& Nomin (nUSD)* & $\perp$  \\ \cline{2-4}
-						& \multirow{2}{*}{Algorithmic with objective external information}  		& CarbonUSD* & 1262 \\ \cline{3-4}
+						& \multirow{1}{*}{Subjective external information}  		& Nomin (nUSD)* & $\perp$  \\ \cline{2-4}
+						& \multirow{2}{*}{Objective external information}  		& CarbonUSD* & 1262 \\ \cline{3-4}
 						&														& Ampleforth* & $\perp$ \\ \cline{2-4}
-						& \multirow{1}{*}{Algorithmic with only internal information} 			& Basecoin & $\perp$ \\ \hline
+						& \multirow{1}{*}{Only internal information} 			& Basecoin & $\perp$ \\ \hline
 
 \end{tabular}
-\vspace{1em}
-\caption{\footnotesize{Systemization the current stablecoin projects} on January 11, 2019. The Projects that are in bold are discussed in this paper.}
-\label{tab:stablecoins}
-\vspace{3em}
+\caption{Systemization of current stablecoin projects as of January 11, 2019. \textit{Disclaimer:} $\dagger$ Projects are classified according to what they assert; \eg we provide no warranty that projects classified as `redeemable' provide actual redemption of the assets that back their coins. Rank corrosponds to \textit{CoinMarketCap}. The projects bold are discussed in this paper.\label{tab:stablecoins}}
 \end{table}
 % ------------------------------------------------------------------------------------------------------------------------------------------------%
