--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -146,8 +146,7 @@
 
 @misc{coinsexplained,
 	Author = {Lukas Schor},
-	Howpublished = {\url{ https://medium.com/@argongroup/stablecoins-explained-206466da5e61
-	}},
+	Howpublished = {\url{ https://medium.com/@argongroup/stablecoins-explained-206466da5e61}},
 	Title = {Stablecoins Explained},
 	Note = {Accessed: 2018-10-29},
 	Year = {2018}}
@@ -172,7 +171,7 @@
   
 }
 
-@book{F. A. Hayek,
+@book {FHayek,
   title={The Denationalization of Money},
   author={Friedrich Hayek},
   pages={},
@@ -193,5 +192,31 @@ howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocu
 month = {November4},
 year = {2014},
 note = {(Accessed on 02/11/2019)}
+}
+
+@misc{StateofS96:online,
+author = {Nathan Sexer},
+title = {State of Stablecoins, 2018 – ConsenSys Media},
+howpublished = {\url{https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}},
+month = {July24},
+year = {2018},
+note = {(Accessed on 02/12/2019)}
+}
+
+@misc{ltblackg50:online,
+author = {Bryan Routledge, Ariel Zetlin-Jones},
+title = {ltblackgray0.1@let@token Currency Stability Using Blockchain Technology},
+howpublished = {\url{http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf}},
+month = {August10},
+year = {2018},
+note = {(Accessed on 02/12/2019)}
+}
+
+@article{sams2015note,
+  title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+  author={Sams, Robert},
+  journal={Brave New Coin},
+  pages={1--8},
+  year={2015}
 }
 
